--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,6 +19,7 @@
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container nav-container">
+            
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
@@ -26,7 +27,7 @@
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                             </button>
-                            <h4>class="modal-title" id="myModalLabel"></h4>
+                            <h4class="modal-title" id="myModalLabel"></h4>
                         </div>
                         <div class="modal-body">
                             <div class="text-center">
