--- a/views/product.hbs
+++ b/views/product.hbs
@@ -1,8 +1,15 @@
+
+
+
+
+<div class="productConatainer text-center">
 {{#item}}
-<p>
-    {{name}}
-    {{description}}
 
-</p>
-
+    <img class="productView" src="{{image_url}}" alt="{{name}}" />
+        <h1> {{name}}</h1>
+        <h3>Description</h3>
+        <h4>{{description}}</h4>
+        <p>${{price}}</p>
+<a href="/cart"><button class="btn btn-defualt" type="button" name="button">Add to Cart</button></a>
 {{/item}}
+</div>
