--- a/views/products.hbs
+++ b/views/products.hbs
@@ -9,71 +9,40 @@
         <h4>{{this.name}}</h4>
 
       </div>
-      <!-- <iframe id="iframe" src="" width="400px" height="300px">
-          testet
-          {{this.name}}
-      </iframe> -->
-      <!-- <a id='link'class="btn btn-lg btn-default"
-         data-toggle="modal"
-         data-target="#productModal"
-         href="/product/{{id}}">Product Details</a> -->
-
-<a href="product/{{id}}">
-      <button id="productDetails" type="button" class="btn btn-primary btn-lg t" data-toggle="modal" data-target="#productModal">
-          Product Details
-      </button>
- </a>
-    </div>
+      <!-- Modal Trigger button -->
+      <!-- <a href="/product/{{id}}" data-remote="false" data-toggle="modal" data-target="#productModal" class="btn btn-default">
+          Launch Modal
+      </a> -->
+      <a href="/product/{{id}}"><button class="btn btn-default"type="button" >Product Details</button></a>
+     </div>
 {{/items}}
 </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
+
+
+<!-- Default bootstrap modal example -->
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Product Details</h4>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
       </div>
       <div class="modal-body">
-          <script type="text/javascript">
-          $('#iframe').hide();
-
-          $('#link').on('click',function(){
-              $('#iframe').show();
-
-              console.log('clicked!'
-              );
-
-              knex('items')
-              .where({id:req.params.id})
-              .select('name', 'description', 'price', 'image_url', 'id')
-              .then(function(item) {
-                  res.render({item:item})
-              });
-
-          });
-
-          </script>
-
           {{#item}}
-              <div class="thumbnail col-md-3 shadow">
-                <img style="height:250px" src="{{this.image_url}}" alt="...">
-                <div class="caption text-center">
-                  <h4>{{name}}</h4>
-                  <h3>{{this.description}}</h3>
-                  <h3>{{this.price}}</h3>
+          <p>
+              {{name}}
+              {{description}}
 
-                </div>
-              </div>
+          </p>
+
           {{/item}}
-
-
-
+        ...
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
