--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,12 +1,15 @@
-<div class="container col-md-offset-1 col-md-12 all">
-<div class="row">
-{{#items}}
-    <div class="thumbnail col-md-3 shadow">
-      <img style="height:250px" src="{{this.image_url}}" alt="...">
-      <div class="caption text-center">
-        <h4>{{this.name}}</h4>
-      </div>
+
+<div class='container'>
+  <div class="col-md-offset-1 col-md-12 all">
+    <div class="row">
+    {{#items}}
+        <div class="thumbnail col-md-3 shadow">
+          <img style="height:250px" src="{{this.image_url}}" alt="...">
+          <div class="caption text-center">
+            <h4>{{this.name}}</h4>
+          </div>
+        </div>
+    {{/items}}
     </div>
-{{/items}}
-</div>
+  </div>
 </div>
