--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,7 +42,7 @@
                   {{/if}}
                   <h3 class="welcome"><b>Welcome, {{name}}!</b>
                     {{#if admin}}
-                    <small><a class='admin' href="/admin">Admin</a></small>
+                    <small><a class='admin' href="/admin">ADMIN</a></small>
                     {{/if}}
                     <small><a class='cart' href='#'>MY CART</a></small>
                     <small><a class="logout" href="/users/logout">LOG OUT</a></small>
@@ -123,7 +123,7 @@
   <footer class='footer'>
     <div class='container'>
       <div class='col-md-2 col-md-offset-1'>
-        <h1 class='footer text-center'>gnosh.</h1>
+        <a class='footer-links' href='/'><h1 class='footer text-center'>gnosh.</h1></a>
       </div>
       <div class="col-md-2 col-md-offset-1 footer-links">
         <ul>
