cart page and button to link to it + delete from cart

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,7 +46,7 @@
             {{#if admin}}
             <small><a class='admin' href="/admin">Admin</a></small>
             {{/if}}
-            <small><a class='cart' href='#'>MY CART</a></small>
+            <small><a class='cart' href='/cart'>MY CART</a></small>
             <small><a class="logout" href="/users/logout">LOG OUT</a></small>
           </h3>
         {{/if}}
