--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,14 +1,42 @@
 <div class="container">
   <div class="col-md-12">
+    <br>
+    <h2 clas="clickInformation">Edit my information</h2>
+    <div class="information">
+      <form action="/admin/new" method="post" >
+        <div class="form-group ">
+          <label>First Name</label>
+          <input class="form-control" type="text" name="first_name" value="">
+        </div>
+        <div class="form-group">
+          <label>Last Name</label>
+          <input class="form-control" type="texr" name="last_name" value="">
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input class="form-control" type="text" name="email" value="">
+        </div>
+        <div class="form-group">
+          <label>password</label>
+          <input class="form-control" type="password" name="password" value="">
+        </div>
+        <div class="form-group">
+          <label>confirm password</label>
+          <input class="form-control" type="password" name="confirm" value="">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="submit"  value="Add Admin">
+        </div>
+      </form>
+    </div>
+
     <h2>You have in your cart:</h2>
     <table class="cartTable">
       <tr>
-        <td>Image</td>
-        <td>description</td>
-        <td>name</td>
-        <td>price</td>
-        <td>Delete</td>
-
+        <th>Image</th>
+        <th>description</th>
+        <th>name</th>
+        <th>price</th>
       </tr>
       {{#data}}
       <tr>
@@ -16,10 +44,9 @@
         <td>{{this.description}}</td>
         <td>{{this.name}}</td>
         <td class="price" price-data={{this.price}}>{{this.price}}</td>
-        <td><a href="/cart/{{this.id}}/delete">Delete this item</a></td>
+        <td><a href="/cart/{{this.item_id}}/delete">Delete this item</a></td>
       </tr>
       {{/data}}
-
     </table>
     <div class="taxTotal">
       <h4 class="tax"></h4>
