cart with access to your info

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,36 +1,6 @@
 <div class="container">
   <div class="col-md-12">
-    <br>
-    <h2 clas="clickInformation">Edit my information</h2>
-    <div class="information">
-      <form action="/admin/new" method="post" >
-        <div class="form-group ">
-          <label>First Name</label>
-          <input class="form-control" type="text" name="first_name" value="">
-        </div>
-        <div class="form-group">
-          <label>Last Name</label>
-          <input class="form-control" type="texr" name="last_name" value="">
-        </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input class="form-control" type="text" name="email" value="">
-        </div>
-        <div class="form-group">
-          <label>password</label>
-          <input class="form-control" type="password" name="password" value="">
-        </div>
-        <div class="form-group">
-          <label>confirm password</label>
-          <input class="form-control" type="password" name="confirm" value="">
-        </div>
-        <div class="form-group">
-          <input class="form-control" type="submit"  value="Add Admin">
-        </div>
-      </form>
-    </div>
-
-    <h2>You have in your cart:</h2>
+    <h2 class="cartH2">You have in your cart:</h2>
     <table class="cartTable">
       <tr>
         <th>Image</th>
@@ -52,6 +22,21 @@
       <h4 class="tax"></h4>
       <h3 class="total"></h3>
     </div>
+  </div>
+
+  <div class="payment">
+    <form action="/users/payment" method="POST">
+    <script
+      src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+      data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+      data-amount="2000"
+      data-name="Demo Site"
+      data-description="2 widgets ($20.00)"
+      data-image="/128x128.png"
+      data-locale="auto">
+    </script>
+  </form>
+
   </div>
 
 </div>
