--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,9 +1,9 @@
 <div class='container'>
-  <div class="col-md-offset-1 col-md-11 all">
-    <div class="row">
+  <div class="all">
+    <div class="col-md-12 row">
     {{#items}}
-        <div class="thumbnail col-md-3 shadow">
-          <img style="height:250px" src="{{this.image_url}}" alt="...">
+        <div class="thumbnail center-block col-md-4">
+          <img style="height:300px; width: 300px" src="{{this.image_url}}" alt="...">
           <div class="caption">
             <h4 class='text-center'>{{this.name}}</h4>
           </div>
