--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,17 @@ body {
 
 /* Top Navbar */
 
+h3.main-logo {
+  position: fixed;
+  left: 44%;
+  top: -25px;
+  z-index: 1000;
+  color: white;
+  font-size: 50px;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
 nav {
   height: 7%;
 }
@@ -217,20 +228,22 @@ h1.login, h1.signup {
     box-shadow: -1px 1px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-/*PRODUCT VIEW*/
+/*SINGLE PRODUCT VIEW*/
 
 .productView {
     width: 30%;
     height: 30%;
-    border:3px solid white;
     box-shadow: -webkit-box-shadow: 9px 6px 7px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 9px 6px 7px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 9px 6px 7px 0px rgba(0, 0, 0, 0.75);
 }
 .productContainer {
-    margin-top:10%;
-    margin-left:5%;
+  font-family: 'Quicksand', sans-serif;
+  margin-top:9%;
+  margin-left:5%;
 }
+
+/* PRODUCTS VIEW */
 
 div.thumbnail {
   width: 300px;
