--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,7 @@
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
+      <a href='/'><h3 class='main-logo'>gnosh.</h3></a>
       <div class="container nav-container">
           <div class="dropdown cart">
              <table class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
@@ -42,7 +43,7 @@
                     {{#if admin}}
                     <small><a class='admin' href="/admin">ADMIN</a></small>
                     {{/if}}
-                    <small><a class='cart' href='#'>MY CART</a></small>
+                    <small><a class='cart' href='/cart'>MY CART</a></small>
                     <small><a class="logout" href="/users/logout">LOG OUT</a></small>
                   </h3>
               {{/if}}
