--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,7 +48,7 @@
                   </h3>
               {{/if}}
               {{#unless user}}
-                  <div class="text-center">
+                  <div class='signup-login'>
                       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
                           Login or Sign up!
                       </button>
