--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,15 +1,9 @@
-<div class='row main-pic'>
-  <div class='col-md-11 col-md-offset-1'>
-    <div class="container text-center col-md-10">
-        <div class='text-center videobox' style="position: relative;"display": flex; z-index: -99; width: 90%; height: 90%">
-          <iframe src="//giphy.com/embed/zwHoN7Ch6c9Nu" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/jerology-cinemagraph-sunset-river-zwHoN7Ch6c9Nu"></a></p>
-        </div>
-    </div>
-  </div>
+<div class='text-center videobox' style="position: relative;"display": flex; z-index: -99; width: 90%; height: 90%">
+  <iframe src="//giphy.com/embed/zwHoN7Ch6c9Nu" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/jerology-cinemagraph-sunset-river-zwHoN7Ch6c9Nu"></a></p>
 </div>
 
-<div class="container adminContainer">  
-<div class="col-md-11 col-md-offset-1 admin">
+<div class="container adminContainer">
+<div class="col-md-12  admin">
   {{#errors}}
     <h4 class='danger'>{{this}}</h4>
   {{/errors}}
@@ -17,7 +11,7 @@
     <h4 class='msg'>{{this}}</h4>
   {{/msg}}
   <h3>{{name}}, What would you like to do?</h3>
-  <h4 class="clickUsers">See all users</h4>
+  <button class='btn btn-primary'><h4 class="clickUsers">See All Users</h4></button>
   <div class="users">
     <table>
       <tr>
@@ -37,7 +31,7 @@
       {{/data}}
     </table>
   </div>
-  <h4 class="clickItems">See all products</h4>
+  <button class='btn btn-primary'><h4 class="clickItems">See All Products</h4></button>
   <div class="container col-md-offset-1 col-md-12 all items">
   <div class="row">
   {{#items}}
@@ -50,7 +44,7 @@
   {{/items}}
   </div>
   </div>
-  <h4 class="clickAdmin">Add new admin</h4>
+  <button class='btn btn-primary'><h4 class="clickAdmin">Add New Admin</h4></button>
   <div class="addAdmin">
     <div class="addAdminForm">
       <form action="/admin/new" method="post" >
@@ -87,7 +81,7 @@
       </form>
     </div>
   </div>
-  <h4 class="clickAddProduct">Add new Product</h4>
+  <button class='btn btn-primary'><h4 class="clickAddProduct">Add New Product</h4></button>
   <div class="addProduct">
     <div class="addProductFrom">
       <form action="/admin/products/add" method="post">
