--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,10 +39,11 @@
                       <img src="{{photo}}"/>
                   {{/if}}
                   <h3 class="welcome"><b>Welcome, {{name}}!</b>
+                    <small><a class='logout' href='/Products'>PRODUCTS</a></small>
                     {{#if admin}}
                     <small><a class='admin' href="/admin">ADMIN</a></small>
                     {{/if}}
-                    <small><a class='cart' href='#'>MY CART</a></small>
+                    <small><a class='cart' href='/cart'>MY CART | </a></small>
                     <small><a class="logout" href="/users/logout">LOG OUT</a></small>
                   </h3>
               {{/if}}
