--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -36,7 +36,8 @@
       {{/data}}
     </table>
   </div>
-  <div class="container col-md-offset-1 col-md-12 all items">
+
+  <div class="container col-md-12 all items">
     <div class="row">
     {{#items}}
         <div class="thumbnail col-md-3 shadow">
