--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -55,33 +55,33 @@
       <form action="/admin/new" method="post" >
         <div class="form-group ">
           <label>First Name</label>
-          <input class="form-control" type="text" name="first_name" value="">
+          <input class="form-control center-block" type="text" name="first_name" value="">
         </div>
         <div class="form-group">
           <label>Last Name</label>
-          <input class="form-control" type="texr" name="last_name" value="">
+          <input class="form-control center-block" type="texr" name="last_name" value="">
         </div>
         <div class="form-group">
           <label>Email</label>
-          <input class="form-control" type="text" name="email" value="">
+          <input class="form-control center-block" type="text" name="email" value="">
         </div>
         <div class="form-group">
-          <label>password</label>
-          <input class="form-control" type="password" name="password" value="">
+          <label>Password</label>
+          <input class="form-control center-block" type="password" name="password" value="">
         </div>
         <div class="form-group">
-          <label>confirm password</label>
-          <input class="form-control" type="password" name="confirm" value="">
+          <label>Confirm password</label>
+          <input class="form-control center-block" type="password" name="confirm" value="">
         </div>
         <div class="form-group">
-          <label>Admin:</label>
-          <select class="form-control" class="" name="admin">
-            <option value='true'>true</option>
-            <option value='false'>false</option>
+          <label>Admin?</label>
+          <select class="form-control center-block" class="" name="admin">
+            <option value='true'>True</option>
+            <option value='false'>False</option>
           </select>
         </div>
         <div class="form-group">
-          <input class="form-control" type="submit"  value="Add Admin">
+          <input class="form-control center-block btn-success" type="submit"  value="Add Admin">
         </div>
       </form>
     </div>
