stripe is fake working

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="col-md-12">
     <h2 class="cartH2">You have in your cart:</h2>
+    {{#if msg}}
+      {{msg}}
+    {{/if}}
     <table class="cartTable">
       <tr>
         <th>Image</th>
@@ -25,14 +28,14 @@
   </div>
 
   <div class="payment">
-    <form action="/users/payment" method="POST">
+    <form action="/cart/payment" method="POST">
     <script
       src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
-      data-amount="2000"
-      data-name="Demo Site"
-      data-description="2 widgets ($20.00)"
-      data-image="/128x128.png"
+      data-amount="{{amount}}"
+      data-name="Basket"
+      data-description="Thank you!"
+      data-image=""
       data-locale="auto">
     </script>
   </form>
