--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,7 +42,7 @@
                     {{#if admin}}
                     <small><a class='admin' href="/admin">ADMIN</a></small>
                     {{/if}}
-                    <small><a class='cart' href='#'>MY CART</a></small>
+                    <small><a class='cart' href='/cart'>MY CART</a></small>
                     <small><a class="logout" href="/users/logout">LOG OUT</a></small>
                   </h3>
               {{/if}}
