--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -88,29 +88,29 @@
   </div>
 
   <div class="addProduct">
-    <div class="addProductFrom">
+    <div class="addProductForm">
       <form action="/admin/products/add" method="post">
         <div class="form-group">
-          <label>product name</label>
-          <input class="form-control" type="text" name="name" value="">
+          <label>Product Name</label>
+          <input class="form-control center-block" type="text" name="name" value="">
         </div>
         <div class="form-group">
-          <label>description</label>
-          <input class="form-control" type="text" name="description" value="">
+          <label>Description</label>
+          <input class="form-control center-block" type="text" name="description" value="">
         </div>
         <div class="form-group">
           <label>Image URL</label>
-          <input class="form-control" type="text" name="image_url" value="">
+          <input class="form-control center-block" type="text" name="image_url" value="">
         </div>
         <div class="form-group">
           <label>Active?</label>
-          <select class="form-control" class="" name="active">
-            <option value='true'>true</option>
-            <option value='false'>false</option>
+          <select class="form-control center-block" class="" name="active">
+            <option value='true'>True</option>
+            <option value='false'>False</option>
           </select>
         </div>
         <div class="form-group">
-          <input class="form-control" type="submit" value="Add this item">
+          <input class="form-control btn-success center-block" type="submit" value="Add this item">
         </div>
       </form>
     </div>
