--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -12,10 +12,10 @@
   {{/msg}}
   <h3>{{name}}, What would you like to do?</h3>
 
-  <button class='btn btn-primary'><h4 class="clickUsers">See All Users</h4></button>
-  <button class='btn btn-primary'><h4 class="clickItems">See All Products</h4></button>
-  <button class='btn btn-primary'><h4 class="clickAdmin">Add New Admin</h4></button>
-  <button class='btn btn-primary'><h4 class="clickAddProduct">Add New Product</h4></button>
+  <button class='btn btn-primary clickUsers'><h4>See All Users</h4></button>
+  <button class='btn btn-primary clickItems'><h4>See All Products</h4></button>
+  <button class='btn btn-primary clickAdmin'><h4>Add New Admin</h4></button>
+  <button class='btn btn-primary clickAddProduct'><h4>Add New Product</h4></button>
 
   <div class="users">
     <table>
@@ -23,7 +23,7 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Email</th>
-        <th>Admin/Not Admin</th>
+        <th>Admin?</th>
       </tr>
       {{#data}}
       <tr>
@@ -31,7 +31,7 @@
         <td>{{last_name}}</td>
         <td>{{email}}</td>
         <td>{{admin}}</td>
-        <td><a href="/admin/users/{{id}}/edit">Edit</a></td>
+        <td><a href="/admin/users/{{id}}/edit">Edit User</a></td>
       </tr>
       {{/data}}
     </table>
