Changed admin:items view, added links to edit and delete

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -281,6 +281,11 @@ div.users > table > tr > th,td {
 
 /* ADMIN / ITEMS */
 
+img.admin-item {
+  height: 100px;
+  width: 100px;
+}
+
 /* ADMIN / ADD ADMIN */
 
 div.addAdmin {
