--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -32,22 +32,31 @@
         <td>{{email}}</td>
         <td>{{admin}}</td>
         <td><a href="/admin/users/{{id}}/edit">Edit User</a></td>
+        <td><a href="/admin/users/{{id}}/delete">Delete User</a></td>
       </tr>
       {{/data}}
     </table>
   </div>
 
   <div class="container col-md-12 all items">
-    <div class="row">
-    {{#items}}
-        <div class="thumbnail col-md-3 shadow">
-          <img style="height:250px" src="{{this.image_url}}" alt="...">
-          <div class="caption text-center">
-            <h4>{{this.name}}</h4>
-          </div>
-        </div>
+    <table>
+      <tr>
+        <th>Image</th>
+        <th>Item Name</th>
+        <th>Description</th>
+        <th>Price</th>
+      </tr>
+      {{#items}}
+      <tr>
+        <td><img class='admin-item' src='{{this.image_url}}'</td>
+        <td>{{this.name}}</td>
+        <td>{{this.description}}</td>
+        <td>${{this.price}}</td>
+        <td><a href='/admin/products/{{id}}/edit'>Edit Item</a></td>
+        <td><a href='/admin/products/{{id}}/delete'>Delete Item</a></td>
+      </tr>
     {{/items}}
-    </div>
+    </table>
   </div>
 
   <div class="addAdmin">
