Work on admin view

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -14,7 +14,7 @@
 
   <button class='btn btn-primary clickUsers'><h4>See All Users</h4></button>
   <button class='btn btn-primary clickItems'><h4>See All Products</h4></button>
-  <button class='btn btn-primary clickAdmin'><h4>Add New Admin</h4></button>
+  <button class='btn btn-primary clickAdmin'><h4>Add New User</h4></button>
   <button class='btn btn-primary clickAddProduct'><h4>Add New Product</h4></button>
 
   <div class="users">
