--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -142,7 +142,7 @@
       <div class='col-md-2 footer-links'>
         <ul>
           <li><a class='footer-links' href='#'>My Account</a></li>
-          <li><a class='footer-links' href='#'>Log Out</a></li>
+          <li><a class='footer-links' href='/users/logout'>Log Out</a></li>
         </ul>
       </div>
     </div>
