add address, fix carousel, add product link at top, database call to users_addresses

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,9 +36,7 @@
         <h3>{{this.name}}</h3>
         <p>{{this.description}}</p>
         <div>
-          <form class="" action="/cart/add/{{this.id}}" method="post">
-            <input class='add-to-cart' type='submit' value='Add to Cart'>
-          </form>
+          <a href="/product/{{id}}">Details</a>
         </div>
       </div>
     </div>
