--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -2,8 +2,8 @@
   <div class="col-md-12">
     <h2 class="cartH2">You have in your cart:</h2>
     <!-- Modal Remote -->
-    <a href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" class="btn btn-default">
-        Update My Info
+    <a class="address" href="remoteContent.html" data-remote="false" data-toggle="modal" data-target="#cartModal" class="btn btn-default">
+        Add Address
     </a>
 
     <!-- Default bootstrap modal example -->
@@ -12,38 +12,24 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Update My Info</h4>
+            <h4 class="modal-title" id="myModalLabel">Add Address</h4>
           </div>
           <div class="modal-body">
-            <form action="{{domething}}"  method="POST" class="text-center col-md-9">
-            <fieldset>
-            <!-- Text input-->
-            <div class="form-group">
-            <label class="col-md-4 control-label">FIRST NAME</label>
-            <input name="first_name" type="text" value"{{user.first_name}}" class="form-control">
-            <label class="col-md-4 control-label">LAST NAME</label>
-            <input name="last_name" type="text" value"{{user.last_name}}" class="form-control">
-            <label class="col-md-4 control-label">EMAIL</label>
-            <input name="email" type="text" value"{{user.email}}" class="form-control">
-            <input type="submit" name="name" value="SAVE MY INFO">
-            </div>
-            </fieldset>
-            </form>
-            <form action="{{domething}}"  method="POST" class="text-center col-md-9">
+            <form action="/users/address/{{user.id}}"  method="POST" class="text-center col-md-9">
             <fieldset>
             <!-- Text input-->
             <div class="form-group">
             <label class="col-md-4 control-label">STREET 1</label>
             <input name="street1" type="text" value"" class="form-control">
             <label class="col-md-4 control-label">STREET 2</label>
-            <input name="street2" type="text" value"" class="form-control">
+            <input name="street2" type="text" value="" class="form-control">
             <label class="col-md-4 control-label">CITY</label>
-            <input name="city" type="text" value"" class="form-control">
+            <input name="city" type="text" value="" class="form-control">
             <label class="col-md-4 control-label">STATE</label>
-            <input name="state" type="text" value"" class="form-control">
+            <input name="state" type="text" value="" class="form-control">
             <label class="col-md-4 control-label">ZIP</label>
-            <input name="zipcode" type="text" value"" class="form-control">
-            <input type="submit" name="name" value="SAVE ADDRESS">
+            <input name="zipcode" type="text" value="" class="form-control">
+            <input class="btn btn-defualt" type="submit"  value="SAVE ADDRESS">
             </div>
             </fieldset>
             </form>
