small change text in layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    small change
   <nav class="navbar navbar-default navbar-fixed-top">
       <a href='/'><h3 class='main-logo'>gnosh.</h3></a>
       <div class="container nav-container">
