--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -135,13 +135,13 @@
       </div>
       <div class='col-md-2 footer-links'>
         <ul>
+          <li><a class='footer-links' href='/products'>Products</a></li>
           <li><a class='footer-links' href='#'>Contact Us</a></li>
-          <li><a class='footer-links' href='#'>Careers</a></li>
         </ul>
       </div>
       <div class='col-md-2 footer-links'>
         <ul>
-          <li><a class='footer-links' href='#'>My Account</a></li>
+          <li><a class='footer-links' href='/users/cart'>My Cart</a></li>
           <li><a class='footer-links' href='/users/logout'>Log Out</a></li>
         </ul>
       </div>
