--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
         <h3>{{this.name}}</h3>
         <p>{{this.description}}</p>
         <div>
-          <a href="/product/{{id}}">Details</a>
+          <a href="/product/{{id}}"><button class='btn btn-primary'>Details</button></a>
         </div>
       </div>
     </div>
