--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,6 @@ body {
     width: 80%;
 }
 
-
 /* Top Navbar */
 
 div.signup-login {
@@ -67,11 +66,33 @@ nav {
 }
 
 .welcome{
-  margin-top: -15px;
+  margin-top: -5px;
   float:right;
 }
 
-/* Cart Dropdown */
+/* Cart */
+
+span.totals > h4 {
+  display: inline-block;
+}
+
+span.totals > h3 {
+  display: inline-block;
+}
+
+a.address {
+  width: 10.1%;
+  margin-bottom: 3px;
+  margin-left: 1.5%
+}
+
+div.payment {
+  margin-left: 1.5%;
+}
+
+div.shopping-cart {
+  font-family: 'Quicksand', sans-serif;
+}
 
 div.cart {
 
@@ -243,7 +264,7 @@ h1.login, h1.signup {
 }
 .productContainer {
   font-family: 'Quicksand', sans-serif;
-  margin-top:7%;
+  margin-top:5%;
 }
 
 /* PRODUCTS VIEW */
@@ -344,7 +365,7 @@ td {
   /*border: solid 2px rgb(40, 71, 113);*/
 
 }
-.users, .addAdmin {
+.users {
   margin-left: 130px;
   /*width: 60%;*/
   /*border: solid 2px rgb(40, 71, 113);*/
